# PersonalFinanceTracker

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  main.cpp
Database/: DatabaseHandler.cpp  DatabaseHandler.h
Model/: Transaction.cpp  Transaction.h
View/: MainWindow.cpp  MainWindow.h
ViewModel/: TransactionManager.cpp  TransactionManager.h
